--- a/App/src/view/EditKQTDFrm.form
+++ b/App/src/view/EditKQTDFrm.form
@@ -201,7 +201,7 @@
               <Font name="Arial" size="14" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="TH&#x1edc;I GIAN THI &#x110;&#x1ea4;U (YYYY/MM/DD)"/>
+            <Property name="text" type="java.lang.String" value="TH&#x1edc;I GIAN THI &#x110;&#x1ea4;U (DD/MM/YYYY)"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jlbSVD">
