--- a/App/src/view/HomeFrm.form
+++ b/App/src/view/HomeFrm.form
@@ -37,7 +37,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder justification="2" title="H&#x1ec6; TH&#x1ed0;NG QU&#x1ea2;N L&#xdd; GI&#x1ea2;I &#x110;&#x1ea4;U NGO&#x1ea0;I H&#x1ea0;NG ANH">
+            <TitledBorder justification="2" title="H&#x1ec6; TH&#x1ed0;NG QU&#x1ea2;N L&#xdd; K&#x1ebe;T QU&#x1ea2; GI&#x1ea2;I &#x110;&#x1ea4;U NGO&#x1ea0;I H&#x1ea0;NG ANH">
               <Font PropertyName="font" name="Arial" size="18" style="1"/>
             </TitledBorder>
           </Border>
@@ -977,8 +977,8 @@
                                   <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                                   <Component id="jLabel4" min="-2" pref="70" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="cbVD_KQTD" min="-2" pref="70" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="203" max="-2" attributes="0"/>
+                                  <Component id="cbVD_KQTD" min="-2" pref="73" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="200" max="-2" attributes="0"/>
                                   <Component id="jLabel15" min="-2" pref="257" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
@@ -1031,7 +1031,7 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="605" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -1136,6 +1136,9 @@
                       <StringArray count="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbCLB2ActionPerformed"/>
+                  </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
                   </AuxValues>
@@ -1159,6 +1162,9 @@
                       <Font name="Arial" size="14" style="0"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtfSobanthang1ActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JTextField" name="jtfSobanthang2">
                   <Properties>
@@ -1176,6 +1182,9 @@
                   </Events>
                 </Component>
                 <Component class="javax.swing.JTextField" name="jtfThoiGianThiDau">
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtfThoiGianThiDauActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jlbSVD">
                   <Properties>
